--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -250,3 +250,20 @@ La entidad Pago almacena la información de los pagos realizados por los inquili
 
 ---
 
+## **Entidad Empleado**  
+La entidad Pago almacena la información de los pagos realizados por los inquilinos. Un pago puede ser registrado manualmente por el administrador o automáticamente a través de una pasarela de pagos. Puede haber múltiples pagos asociados a una factura si se permiten pagos parciales.
+
+| **Atributo**         | **Naturaleza** | **Formato**         | **Valores Válidos**       | **Unidad** | **Derivada de** | **Descripción (Corta)**                                |
+|----------------------|----------------|---------------------|---------------------------|------------|-----------------|--------------------------------------------------------|
+| idEmpleado               | CHAR(10)       | x(10)               | No nulo, único             | N/A        | N/A             | Identificador único del pago.                          |
+| Rol           | DATE           | dd/mm/aaaa          | No nulo                    | N/A        | N/A             | Fecha en la que se realizó el pago.                    |
+| Nombres           | DECIMAL(10,2)  | 9999999.99          | No nulo, > 0               | Moneda     | N/A             | Monto pagado en esta transacción.                      |
+| Apellido Paterno          | CHAR(20)       | x(20)               | "Manual", "Automático"     | N/A        | N/A             | Método utilizado par            |
+| Apellido Materno          | CHAR(20)       | x(20)               | "Manual", "Automático"     | N/A        | N/A             | Método utilizado par            |
+| Nacionalidad          | CHAR(20)       | x(20)               | "Manual", "Automático"     | N/A        | N/A             | Método utilizado par            |
+| Documento de identidad          | CHAR(20)       | x(20)               | "Manual", "Automático"     | N/A        | N/A             | Método utilizado par            |
+| Dirección          | CHAR(20)       | x(20)               | "Manual", "Automático"     | N/A        | N/A             | Método utilizado par            |
+| Cargo          | CHAR(20)       | x(20)               | "Manual", "Automático"     | N/A        | N/A             | Método utilizado par            |
+
+---
+
