--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -267,3 +267,25 @@ La entidad Pago almacena la información de los pagos realizados por los inquili
 
 ---
 
+## **Entidad Empleado**  
+La entidad Pago almacena la información de los pagos realizados por los inquilinos. Un pago puede ser registrado manualmente por el administrador o automáticamente a través de una pasarela de pagos. Puede haber múltiples pagos asociados a una factura si se permiten pagos parciales.
+
+| **Atributo**            | **Naturaleza** | **Formato** | **Valores Válidos**       | **Unidad** | **Derivada de** | **Descripción**                                                      |
+|-------------------------|----------------|-------------|---------------------------|------------|-----------------|----------------------------------------------------------------------|
+| ID de Empleado       | CHAR(10) | Alfanumérico| Único por empleado         | N/A        | Generado        | Identificador único para cada empleado                               |
+| Nombre             | Obligatorio    | Texto       | Nombres y Apellidos        | N/A        | Ingresado       | Nombre completo del empleado                                         |
+| Fecha de Nacimiento  | Obligatorio    | Fecha       | AAAA-MM-DD                 | Años       | Ingresado       | Fecha de nacimiento del empleado                                     |
+| Género            | Opcional       | Texto       | Masculino, Femenino, Otro  | N/A        | Ingresado       | Identidad de género del empleado                                     |
+| Estado Civil         | Opcional       | Texto       | Soltero, Casado, Divorciado, etc. | N/A    | Ingresado       | Estado civil del empleado                                            |
+| Nacionalidad         | Obligatorio    | Texto       | Países reconocidos         | N/A        | Ingresado       | Nacionalidad del empleado                                            |
+| Número de Identificación | Obligatorio | Alfanumérico| Según país (DNI, Pasaporte)| N/A        | Ingresado       | Documento de identidad nacional o pasaporte                          |
+| Dirección            | Opcional       | Texto       | Dirección válida           | N/A        | Ingresado       | Domicilio actual del empleado                                        |
+| Teléfono             | Opcional       | Numérico    | Número de teléfono válido  | N/A        | Ingresado       | Número de contacto telefónico                                        |
+| Correo Electrónico   | Opcional       | Texto       | Dirección de email válida  | N/A        | Ingresado       | Correo electrónico personal o laboral       |
+ 
+| Cargo    | Obligatorio    | Texto       | Cargo dentro de la empresa | N/A        | Ingresado       | Título o posición que ocupa el empleado en la organización           |
+| Salario              | Obligatorio    | Numérico    | Valor monetario            | Moneda     | Ingresado       | Salario base del empleado                                            |
+| Fotografía           | Opcional       | Imagen      | Archivo de imagen          | N/A        | Ingresado       | Fotografía del empleado para el sistema                              |
+
+---
+
