--- a/4/4.7/4.7.md
+++ b/4/4.7/4.7.md
@@ -22,7 +22,7 @@
 | 2 | Al administrador se le muestra un mapa donde se puede seleccionar un área, salvo las secciones ya ocupadas.
 | 3 | El usuario selecciona un área en el mapa |
 | 4 | El Usuario presiona el botón agregar |
-| 5 | El sistema valida guarda la información de los puntos seleccionados. |
+| 5 | El sistema valida y  guarda la información de los puntos seleccionados. |
 | 6 | Se muestra un nuevo mapa con todos los puntos definidos para módulos y se muestra el nuevo punto agregado. |
 | 7 | Se preciona el botón terminar. |
 
@@ -34,8 +34,8 @@
 | Descripción | Permite que se pueda solicitar el uso de una zona común para un evento. |
 | Actor | Cliente |
 | Flujo de eventos |
-| 1 | El administrador accede al sistema en la seccion de eventos y módulos y selecciona la opción "Solicitar zona para evento". |
-| 2 | Al administrador se le muestra un mapa donde se puede seleccionar una de las áreas disponibles. |
+| 1 | El cliente accede al sistema en la seccion de eventos y módulos y selecciona la opción "Solicitar zona para evento". |
+| 2 | Al cliente se le muestra un mapa donde se puede seleccionar una de las áreas disponibles. |
 | 3 | El usuario describirá para que será usado esa zona cómun y el tiempo que se usará |
 | 4 | El sistema muestra un costo mínimo pero el usuario puede proponer un presio |
 | 5 | Presiona el botón terminar. |
