--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -253,23 +253,6 @@ La entidad Pago almacena la información de los pagos realizados por los inquili
 ## **Entidad Empleado**  
 La entidad Pago almacena la información de los pagos realizados por los inquilinos. Un pago puede ser registrado manualmente por el administrador o automáticamente a través de una pasarela de pagos. Puede haber múltiples pagos asociados a una factura si se permiten pagos parciales.
 
-| **Atributo**         | **Naturaleza** | **Formato**         | **Valores Válidos**       | **Unidad** | **Derivada de** | **Descripción (Corta)**                                |
-|----------------------|----------------|---------------------|---------------------------|------------|-----------------|--------------------------------------------------------|
-| idEmpleado               | CHAR(10)       | x(10)               | No nulo, único             | N/A        | N/A             | Identificador único del pago.                          |
-| Rol           | DATE           | dd/mm/aaaa          | No nulo                    | N/A        | N/A             | Fecha en la que se realizó el pago.                    |
-| Nombres           | DECIMAL(10,2)  | 9999999.99          | No nulo, > 0               | Moneda     | N/A             | Monto pagado en esta transacción.                      |
-| Apellido Paterno          | CHAR(20)       | x(20)               | "Manual", "Automático"     | N/A        | N/A             | Método utilizado par            |
-| Apellido Materno          | CHAR(20)       | x(20)               | "Manual", "Automático"     | N/A        | N/A             | Método utilizado par            |
-| Nacionalidad          | CHAR(20)       | x(20)               | "Manual", "Automático"     | N/A        | N/A             | Método utilizado par            |
-| Documento de identidad          | CHAR(20)       | x(20)               | "Manual", "Automático"     | N/A        | N/A             | Método utilizado par            |
-| Dirección          | CHAR(20)       | x(20)               | "Manual", "Automático"     | N/A        | N/A             | Método utilizado par            |
-| Cargo          | CHAR(20)       | x(20)               | "Manual", "Automático"     | N/A        | N/A             | Método utilizado par            |
-
----
-
-## **Entidad Empleado**  
-La entidad Pago almacena la información de los pagos realizados por los inquilinos. Un pago puede ser registrado manualmente por el administrador o automáticamente a través de una pasarela de pagos. Puede haber múltiples pagos asociados a una factura si se permiten pagos parciales.
-
 | **Atributo**            | **Naturaleza**  | **Formato**  | **Valores Válidos**       | **Unidad** | **Derivada de** | **Descripción**                                                      |
 |-------------------------|-----------------|--------------|---------------------------|------------|-----------------|----------------------------------------------------------------------|
 | ID de Empleado       | CHAR(10)        | x(10)        | Único por empleado         | N/A        | N/A        | Identificador único para cada empleado                               |
@@ -277,14 +260,24 @@ La entidad Pago almacena la información de los pagos realizados por los inquili
 | Fecha de Nacimiento  | DATE            | YYYY-MM-DD   | AAAA-MM-DD                 | Años       | N/A       | Fecha de nacimiento del empleado                                     |
 | Género               | VARCHAR(10)     | x(10)        | Masculino, Femenino, Otro  | N/A        | N/A       | Identidad de género del empleado                                     |
 | Estado Civil        | VARCHAR(15)     | x(15)        | Soltero, Casado, Divorciado, etc. | N/A    | N/A       | Estado civil del empleado                                            |
-| Nacionalidad         | VARCHAR(50)     | x(50)        | Países reconocidos         | N/A        | N/A       | Nacionalidad del empleado                                            |
+| Nacionalidad         | VARCHAR(50)     | x(50)        | TAB4         | N/A        | N/A       | Nacionalidad del empleado                                            |
 | Número de Identificación | VARCHAR(20) | x(20)        | Según país (DNI, Pasaporte)| N/A        | N/A       | Documento de identidad nacional o pasaporte                          |
 | Dirección            | VARCHAR(255)    | x(255)       | Dirección válida           | N/A        | N/A       | Domicilio actual del empleado                                        |
 | Teléfono             | VARCHAR(15)     | x(15)        | Número de teléfono válido  | N/A        | N/A       | Número de contacto telefónico                                        |
 | Correo Electrónico   | VARCHAR(100)    | x(100)       | Dirección de email válida  | N/A        | N/A       | Correo electrónico personal o laboral                                |
-| Cargo               | VARCHAR(50)     | x(50)        | Cargo dentro de la empresa | N/A        | Ingresado       | Título o posición que ocupa el empleado en la organización           |
-| Salario              | DECIMAL(10,2)   | Númerico(10,2)| Valor monetario            | Moneda     | Ingresado       | Salario base del empleado                                            |
-| Fotografía           | BLOB            | Archivo binario | Archivo de imagen      | N/A        | Ingresado       | Fotografía del empleado para el sistema                              |
+| Cargo               | VARCHAR(50)     | x(50)        | Cargo dentro de la empresa | N/A        | N/A       | Título o posición que ocupa el empleado en la organización           |
+| Salario              | DECIMAL(10,2)   | Númerico(10,2)| Valor monetario            | Moneda     | N/A       | Salario base del empleado                                            |
+| Fotografía           | BLOB            | Archivo binario | Archivo de imagen      | N/A        | N/A       | Fotografía del empleado para el sistema                              |
+
+TAB4
+
+|CODIGO |  DESCRIPCIÓN |
+|-------|--------------|
+| P1    |  Perú      |
+| P2    |  España      |
+| P3    |  Chile     |
+| P4    |  EEUU      |
+| P5    |  Venezuela     |
 
 ---
 
