--- a/0/0.2_Joel/0.2.md
+++ b/0/0.2_Joel/0.2.md
@@ -26,4 +26,10 @@
   Espero tener suficiente conocimiento en relación al diseño de base de datos ya que, si bien tengo algunos conceptos de esta, todavía no se cuál es la forma de diseñarla correctamente para tener una base de datos robusta.
 
 - ¿Cómo me veo en 10 años?
-  Yo me orienta a realizar una linea de carrera dirigido a la ciberseguridad y creación de sistemas de seguridad informática. Mi objetivo es llegar a ser un arquitecto de seguridad y tener una empresa que brinde servicios de seguridad de la información hacia las demás empresas. 
+  Yo me orienta a realizar una linea de carrera dirigido a la ciberseguridad y creación de sistemas de seguridad informática. Mi objetivo es llegar a ser un arquitecto de seguridad y tener una empresa que brinde servicios de seguridad de la información hacia las demás empresas.
+
+
+  VIDEOS:
+* Practica N1:
+  
+https://youtu.be/mmeTt32NI9s
