--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -251,11 +251,11 @@ La entidad Pago almacena la información de los pagos realizados por los inquili
 ---
 
 ## **Entidad Empleado**  
-La entidad Pago almacena la información de los pagos realizados por los inquilinos. Un pago puede ser registrado manualmente por el administrador o automáticamente a través de una pasarela de pagos. Puede haber múltiples pagos asociados a una factura si se permiten pagos parciales.
+La entidad Empleado representa a una persona que trabaja en una empresa, almacenando sus datos personales y laborales.
 
 | **Atributo**            | **Naturaleza**  | **Formato**  | **Valores Válidos**       | **Unidad** | **Derivada de** | **Descripción**                                                      |
 |-------------------------|-----------------|--------------|---------------------------|------------|-----------------|----------------------------------------------------------------------|
-| ID de Empleado       | CHAR(10)        | x(10)        | Único por empleado         | N/A        | N/A        | Identificador único para cada empleado                               |
+| IdEmpleado       | CHAR(10)        | x(10)        | Único por empleado         | N/A        | N/A        | Identificador único para cada empleado                               |
 | Nombre               | VARCHAR(100)    | x(100)       | Nombres y Apellidos        | N/A        | N/A       | Nombre completo del empleado                                         |
 | Fecha de Nacimiento  | DATE            | YYYY-MM-DD   | AAAA-MM-DD                 | Años       | N/A       | Fecha de nacimiento del empleado                                     |
 | Género               | VARCHAR(10)     | x(10)        | Masculino, Femenino, Otro  | N/A        | N/A       | Identidad de género del empleado                                     |
@@ -278,6 +278,22 @@ TAB4
 | P3    |  Chile     |
 | P4    |  EEUU      |
 | P5    |  Venezuela     |
+
+---
+
+## **Entidad Contrato Empleado**  
+La entidad Contrato Empleado define los términos de empleo de un empleado.
+
+| **Atributo**               | **Naturaleza** | **Formato**    | **Valores Válidos**               | **Unidad**   | **Derivada de**       | **Descripción**                                              |
+|----------------------------|----------------|----------------|-----------------------------------|--------------|-----------------------|--------------------------------------------------------------|
+| IdContratoEmpleado          | CHAR(10)       | x(10)          | Único por contrato                | N/A          | Generado              | Identificador único para cada contrato                        |
+| IdEmpleado          | CHAR(10)       | x(10)          | Relación con empleado             | N/A          | Relación (Empleado)    | Identificador del empleado asociado al contrato               |
+| Fecha de Inicio         | DATE           | YYYY-MM-DD     | Fecha válida                      | Días         | Ingresado             | Fecha de inicio del contrato                                 |
+| Fecha de Fin            | DATE           | YYYY-MM-DD     | Fecha válida o NULL si es indefinido | Días      | Ingresado             | Fecha de finalización del contrato, si es aplicable           |
+| Salario Base           | DECIMAL(10,2)  | Numérico(10,2) | Valor monetario                   | Moneda       | Ingresado             | Salario base asociado al contrato del empleado                |
+| Jornada Laboral         | VARCHAR(15)    | x(15)          | Completa, Parcial, Turno Rotativo | N/A          | Ingresado             | Tipo de jornada que cubre el contrato                         |
+| Estado del Contrato     | VARCHAR(15)    | x(15)          | Activo, Finalizado, Suspendido    | N/A          | Ingresado             | Estado actual del contrato del empleado                       |
+| Descripción del Cargo   | TEXT           | Texto libre    | Descripción detallada             | N/A          | Ingresado             | Descripción del cargo o responsabilidades en el contrato      |
 
 ---
 
