--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -286,14 +286,14 @@ La entidad Contrato Empleado define los términos de empleo de un empleado.
 
 | **Atributo**               | **Naturaleza** | **Formato**    | **Valores Válidos**               | **Unidad**   | **Derivada de**       | **Descripción**                                              |
 |----------------------------|----------------|----------------|-----------------------------------|--------------|-----------------------|--------------------------------------------------------------|
-| IdContratoEmpleado          | CHAR(10)       | x(10)          | Único por contrato                | N/A          | Generado              | Identificador único para cada contrato                        |
-| IdEmpleado          | CHAR(10)       | x(10)          | Relación con empleado             | N/A          | Relación (Empleado)    | Identificador del empleado asociado al contrato               |
-| Fecha de Inicio         | DATE           | YYYY-MM-DD     | Fecha válida                      | Días         | Ingresado             | Fecha de inicio del contrato                                 |
-| Fecha de Fin            | DATE           | YYYY-MM-DD     | Fecha válida o NULL si es indefinido | Días      | Ingresado             | Fecha de finalización del contrato, si es aplicable           |
-| Salario Base           | DECIMAL(10,2)  | Numérico(10,2) | Valor monetario                   | Moneda       | Ingresado             | Salario base asociado al contrato del empleado                |
-| Jornada Laboral         | VARCHAR(15)    | x(15)          | Completa, Parcial, Turno Rotativo | N/A          | Ingresado             | Tipo de jornada que cubre el contrato                         |
-| Estado del Contrato     | VARCHAR(15)    | x(15)          | Activo, Finalizado, Suspendido    | N/A          | Ingresado             | Estado actual del contrato del empleado                       |
-| Descripción del Cargo   | TEXT           | Texto libre    | Descripción detallada             | N/A          | Ingresado             | Descripción del cargo o responsabilidades en el contrato      |
+| IdContratoEmpleado          | CHAR(10)       | x(10)          | Único por contrato                | N/A          | N/A              | Identificador único para cada contrato                        |
+| IdEmpleado          | CHAR(10)       | x(10)          | Relación con empleado             | N/A          | Empleado    | Identificador del empleado asociado al contrato               |
+| Fecha de Inicio         | DATE           | YYYY-MM-DD     | Fecha válida                      | Días         | N/A             | Fecha de inicio del contrato                                 |
+| Fecha de Fin            | DATE           | YYYY-MM-DD     | Fecha válida o NULL si es indefinido | Días      | N/A             | Fecha de finalización del contrato, si es aplicable           |
+| Salario Base           | DECIMAL(10,2)  | Numérico(10,2) | Valor monetario                   | Moneda       | N/A             | Salario base asociado al contrato del empleado                |
+| Jornada Laboral         | VARCHAR(15)    | x(15)          | Completa, Parcial, Turno Rotativo | N/A          | N/A             | Tipo de jornada que cubre el contrato                         |
+| Estado del Contrato     | VARCHAR(15)    | x(15)          | Activo, Finalizado, Suspendido    | N/A          | N/A             | Estado actual del contrato del empleado                       |
+| Descripción del Cargo   | TEXT           | Texto libre    | Descripción detallada             | N/A          | N/A             | Descripción del cargo o responsabilidades en el contrato      |
 
 ---
 
