--- a/4/4.4/4.4.md
+++ b/4/4.4/4.4.md
@@ -5,7 +5,7 @@
 | Requerimiento | Nombre |
 |---------------|--------|
 | R001 | Crear un nuevo inquilino |
-| R002 | Asignar un espacio a un inquilino |
+| R002 | Editar un inquilino |
 | R003 | Eliminar o dar de baja a un inquilino |
 | R004 | Gestionar la renovación de contratos |
 
@@ -26,22 +26,24 @@
 | 6 | El administrador puede optar por agregar contactos adicionales para el inquilino registrado. |
 | 7 | Fin del caso de uso. |
 
-### Caso de Uso #2: Asignar un espacio a un inquilino
-| Código | R002 |
-|--------|------|
-| Objetivo | Asignar un espacio disponible en el centro comerciaol a un inquilino |
-| Descripción | El administrador selecciona un espacio disponible y asigna un contrato de arrendamiento a un inquilino |
-| Actor | Administrador |
-| Flujo de eventos |
-| 1 | El administrador accede al sistema y selecciona un inquilino registrado. |
-| 2 | El administrador selecciona la opción "Asignar espacio". |
-| 3 | El sistema muestra una lista de espacios disponibles, junto con sus detaller (ubicación, superficie, tipo de espacio). |
-| 4 | El administrador selecciona un espacio adecuado para el inquilino. |
-| 5 | El sistema solicita el administrador que ingrese los detalles del contrato: fechas de inicio y fin, monto de renta, condiciones adicionales.
-| 6 | El sistema valida que el espacio esté disponible en las fecha indicadas. |
-| 7 | Si todo está correcto, el sistema guarda el c ontarto y actualiza el estado del espacio a "Ocupado". |
-| 8 | El sistema notifica al administrado que el espacio ha sido asignado exitosamente. |
-| 9 | Fin del caso de uso. |
+### Caso de Uso #2: Editar un inquilino
+| Caso de uso | R002 |
+|-------------|---------------------------|
+| **Objetivo** | Permitir a los administradores actualizar la información de un inquilino registrado en el sistema. |
+| **Descripción** | Este caso de uso permite a los administradores modificar los datos existentes de un inquilino, asegurando que la información sea precisa y esté actualizada. |
+| **Actor** | Administrador |
+| **Flujo de eventos** |
+| 1 | El administrador accede al módulo de inquilinos. |
+| 2 | El administrador selecciona la opción "Editar". |
+| 3 | El sistema muestra una lista de inquilinos registrados. |
+| 4 | El administrador selecciona al inquilino que desea modificar. |
+| 5 | El sistema muestra la información actual del inquilino. |
+| 6 | El administrador realiza los cambios necesarios. |
+| 7 | El administrador confirma los cambios.|
+| 8 | El sistema valida los datos ingresados.
+| 9 | El sistema actualiza la información en la base de datos. |
+| 10 | El sistema muestra un mensaje de confirmación. |
+
 
 ### Caso de Uso #3: Eliminar o dar de baja a un inquilino
 | Código | R003 |
