--- a/4/4.md
+++ b/4/4.md
@@ -40,7 +40,7 @@
         </tr>
         <tr>
             <td>2</td>
-            <td>Asignar un espacio a un inquilino</td>
+            <td>Editar un inquilino</td>
             <td>R002</td>
         </tr>
         <tr>
