--- a/0/0.7_Luis/0.7.md
+++ b/0/0.7_Luis/0.7.md
@@ -19,3 +19,8 @@ Mi experiencia en el curso de modelado conceptual de datos fue realmente interes
  Espero que el curso de diseño de base de datos me proporcione una comprensión más profunda de cómo estructurar bases de datos efectivas y optimizar su rendimiento.
 - ¿Cómo me veo en 10 años?
  En diez años, espero estar trabajando en una empresa importante, habiéndome especializado en una rama específica, como la ciencia de datos.
+
+VIDEOS:
+* Practica N1:
+  
+https://www.youtube.com/watch?v=aFd-9lCwkyY&t=347s
