--- a/0/0.md
+++ b/0/0.md
@@ -13,4 +13,4 @@ Sistema para la Gestión de Espacios y Arrendamientos en las diferentes sedes de
 - Gonzales Camarena, Daryl Renzo - 20200160F
 - Huamani Ruiz, Emanuel Lenin -	20181195H
 - Campos Gamonal, Piero César - 20210063C
-
+- Aymachoque Aymachoque, Luis Jairo - 20191144G
