--- a/0/0.5_Piero/0.5.md
+++ b/0/0.5_Piero/0.5.md
@@ -26,4 +26,10 @@
   Aprender cosas nuevas, y trabajar de la mejor manera con mi equipo para sacar el proyecto del curso adelante.
 
 - ¿Cómo me veo en 10 años?
-  Me veo como una profesional con experiencia  en analisis de datos y con ganas de iniciar un emprendimient
+  Me veo como una profesional con experiencia  en analisis de datos y con ganas de iniciar un emprendimiento.
+
+    VIDEOS:
+* Practica 1:
+  
+https://www.youtube.com/watch?v=GFpKeq9AyE8
+
