--- a/2/2.2/2.2.md
+++ b/2/2.2/2.2.md
@@ -28,5 +28,5 @@ El proceso del módulo de mantenimientos permite el registro de incidencias que 
 
 El proceso del módulo de empleados permite administrar la situación contractual de los empleados.
 
-![EmpleadosTOBE](Empleados_TO_BE.jpg)
+![EmpleadosTOBE](Empleados_TO_BE.png)
  
