--- a/2/2.2/2.2.md
+++ b/2/2.2/2.2.md
@@ -24,7 +24,7 @@ El proceso del módulo de mantenimientos permite el registro de incidencias que 
 ![MantenimientoTOBE](Mantenimiento_TO_BE.jpg)
 
 
-## Proceso Empleados
+## Proceso Gestión de empleados
 
 El proceso del módulo de empleados permite administrar la situación contractual de los empleados.
 
