add Entidad espacio común

--- a/5/5.2/5.2.md
+++ b/5/5.2/5.2.md
@@ -296,3 +296,24 @@ La entidad Contrato Empleado define los términos de empleo de un empleado.
 
 ---
 
+## Entidad Espacio Común
+Se encuentran los espacios comunes que se pueden solicitar un uso
+
+| **Atributo**        | **Naturaleza** | **Formato**          | **Valores Válidos**   | **Unidad**| **Derivada de** | **Descripción (Corta)**                             |
+|---------------------|----------------|----------------------|-----------------------|-----------|-----------------|-----------------------------------------------------|
+| idEspacioComun       | CHAR (10)    | x(10)        | No nulo, único        | N/A                | N/A             | Código único asignado a cada espacio comercial.             |
+| Área       |  DECIMAL(10,2)   | 9999999.99    | >0     | Metros cuadrados (m²) | N/A             | Superficie total del espacio comercial.                     |
+| Ubicación                  | CHAR            | X(64)                | No nulo   | N/A                | N/A             | Ubicación del espacio comercial dentro de Mall Plaza.                     |
+| Estado                     |  CHAR (10)       |x(10)| TAB1   | N/A                | N/A             | Estado actual del espacio comercial.                         |
+| PrecioPorDia       |  DECIMAL(10,2)   | 9999999.99    | >0     | Moneda | N/A             | Precio de alquilar el Espacio común por un día.  | 
+| MotivoDeUso       |  CHAR(50)   | Texto libre    | Descripción detallada    | N/A | N/A             | Descripción del los motivos y para que se usará el Espació común solicitado.  | 
+
+TAB1
+
+|CODIGO |  DESCRIPCIÓN |
+|-------|--------------|
+| S1    |  Ocupado      |
+| S2    |  Disponible      |
+| S3    |  En mantenimiento     |
+
+
