--- a/0/0.4_Gavino/0.4.md
+++ b/0/0.4_Gavino/0.4.md
@@ -27,3 +27,6 @@
 
 - ¿Cómo me veo en 10 años?
 	Espero estar trabajando en algo de lo que haya aprendido o desarrollado en mi trayectoria como estudiante y a la par seguir creciendo profesionalmente.
+
+Videos:
+- PC1: https://youtu.be/eEWZaiSicuA
