--- a/0/0.6_Emanuel/0.6.md
+++ b/0/0.6_Emanuel/0.6.md
@@ -29,3 +29,7 @@
 
 - ¿Cómo me veo en 10 años?
   Me veo ya teniendo una empresa propia o iniciando una empresa tecnológica, siendo un desarrollador experto y con una maestría.
+
+  ## PRESETNACIÓN PC1
+  Módulo 4: Inquilinos
+  Link del video individual: https://youtu.be/_imLK59c02Y
