--- a/3/3.2/3.2.md
+++ b/3/3.2/3.2.md
@@ -59,7 +59,7 @@ Mediante este modulo los inquilinos y la empresa pueden gestionar los servicios 
   
     Completado: Se ha realizado el pago por el recobro
   Funcionalidad:
-  - Home recobros
+  - visualizar recobros
     
     Responsabilidad: Es la ventana por el cual el inquilino puede ver el estado de los recobros e iniciar la solicitud de uno nuevo
   - Solicitud de recobro
@@ -71,19 +71,16 @@ Mediante este modulo los inquilinos y la empresa pueden gestionar los servicios 
   - Valoracion del recobro
     
     Responsabilidad: Permite a la empresa planificar y valorar las actividades necesarias para realizar el servicio
+  - Planificacion del recobro
+    
+    Responsabilidad: Permite la planificacion de las actividades necesarias para llevar a cabo el servicio
   - Negociacion del recobro
     
     Responsabilidad: Es el medio por el cual el inquilino y la empresa se comunican para llegar a un acuerdo sobre el servicio que termine en un contrato
-  - Ejecucion del recobro
+  - Supervision del recobro
     
-    Responsabilidad: Permite la supervision de las actividades realizadas para llevar a cabo el servicio
-  - Facturacion del recobro
+    Responsabilidad: Permite la supervision de las actividades dentro del cronograma del servicio
     
-    Responsabilidad: La ventana por la cual el inquilino realiza el pago del servicio
-  - Recepcion del recobro
-    
-    Responsabilidad: Comunicar al modulo de factura y pagos sobre la facturacion del recobro
-
 ## 7. Módulo de Eventos
 ### Responsabilidades
 - 
