--- a/3/3.2/3.2.md
+++ b/3/3.2/3.2.md
@@ -2,15 +2,16 @@
 
 ## 1. Módulo de Logueo y Seguridad
 ### Responsabilidades
-- 
+- Brindar seguridad en el acceso de los usuarios
 #### Interacción con otros módulos
-- 
+- No interactua directamente con los demás módulos.
 
-## 2. Módulo de Usuarios
+## 2. Módulo de Empleados
 ### Responsabilidades
-- 
+- Gestionar los empleados de la empresa según su situación contractual.
+- Actualizar la data de los empleados.
 ### Interacción con otros módulos
-- 
+- Brindar los permisos en la plataforma según el cargo en la empresa.
 
 ## 3 Módulo de Arrendamientos
 ### Responsabilidades
