--- a/3/3.2/3.2.md
+++ b/3/3.2/3.2.md
@@ -86,9 +86,10 @@ Mediante este modulo los inquilinos y la empresa pueden gestionar los servicios 
 
 ## 7. Módulo de Eventos
 ### Responsabilidades
-- 
+- Gestión de los espacios de las zonas comunes para eventos y módulos
 ### Interacción con otros módulos
-- 
+- Envia una solicitud que deberá ser revisada y aprobada.
+- Módulo de seguridad: Aquel que puede solicitar un espacio debe ser un cliente registrado y logeado.
 
 ## 8. Módulo de Mantenimiento y Servicio
 Mediante este módulo la empresa podrá gestionar el mantenimiento preventivo y correctivo del centro comercial.
