--- a/0/0.6_Emanuel/0.6.md
+++ b/0/0.6_Emanuel/0.6.md
@@ -31,5 +31,5 @@
   Me veo ya teniendo una empresa propia o iniciando una empresa tecnológica, siendo un desarrollador experto y con una maestría.
 
   ## PRESETNACIÓN PC1
-  Módulo 4: Inquilinos
+  Módulo 7: Eventos
   Link del video individual: https://youtu.be/_imLK59c02Y
